# VapourSynth-EdgeMasks

./: README.md  meson.build  pyproject.toml
.github/workflows/: build.yml  cibuildwheel.yml  codespell.yml  windows.yml
EdgeMasks/: edgemasks.cpp  edgemasks.h  edgemasks_avx2.cpp  edgemasks_avx512.cpp  edgemasks_sse4.cpp
