[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "vapoursynth-edgemasks"
description = "Creates an edge mask using various operators"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["vapoursynth", "edgemasks"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: C++",
  "Topic :: Multimedia :: Video",
]
dependencies = ["VapourSynth"]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/HolyWu/VapourSynth-EdgeMasks"
Issues = "https://github.com/HolyWu/VapourSynth-EdgeMasks/issues"
